--- a/service/service-product/src/main/resources/application.yaml
+++ b/service/service-product/src/main/resources/application.yaml
@@ -8,3 +8,11 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
+
+
+app:
+  minio:
+    endpoint: http://192.168.1.100:9000
+    accessKey: admin
+    secretKey: admin123456
+    bucketName: gmall
